--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -13,7 +13,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navi(activeTab)">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/product/all}">GB SHop</a>
+        <a class="navbar-brand" th:href="@{/product/all}">GB Shop</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,6 +27,10 @@
                 <li class="nav-item">
                     <a class="nav-link" th:classappend="${activeTab == 'ProductForm' ? 'active' : ''}"
                        th:href="@{/product}">Добавить продукт</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:classappend="${activeTab == 'Cart' ? 'active' : ''}"
+                       th:href="@{/product/cart-list}">Корзина</a>
                 </li>
             </ul>
         </div>
