--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.w3.org/1999/html" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -24,13 +24,21 @@
                     <a class="nav-link" th:classappend="${activeTab == 'ProductList' ? 'active' : ''}"
                        aria-current="page" th:href="@{/product/all}">Список продуктов</a>
                 </li>
-                <li class="nav-item">
+                <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
                     <a class="nav-link" th:classappend="${activeTab == 'ProductForm' ? 'active' : ''}"
                        th:href="@{/product}">Добавить продукт</a>
                 </li>
-                <li class="nav-item">
+                <li sec:authorize="hasAuthority('USER')" class="nav-item">
                     <a class="nav-link" th:classappend="${activeTab == 'Cart' ? 'active' : ''}"
                        th:href="@{/product/cart-list}">Корзина</a>
+                </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <form th:action="@{/logout}" method="post">
+                        <input type="submit" class="btn btn-danger" value="Выйти"/>
+                    </form>
+                </li>
+                <li sec:authorize="isAnonymous()" class="nav-item">
+                    <a type="button" th:href="@{/login}" class="btn btn-success">Войти</a>
                 </li>
             </ul>
         </div>
