--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -24,11 +24,11 @@
                     <a class="nav-link" th:classappend="${activeTab == 'ProductList' ? 'active' : ''}"
                        aria-current="page" th:href="@{/product/all}">Список продуктов</a>
                 </li>
-                <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
+                <li sec:authorize="hasAuthority('product.create')" class="nav-item">
                     <a class="nav-link" th:classappend="${activeTab == 'ProductForm' ? 'active' : ''}"
                        th:href="@{/product}">Добавить продукт</a>
                 </li>
-                <li sec:authorize="hasAuthority('USER')" class="nav-item">
+                <li sec:authorize="hasAuthority('product.read')" class="nav-item">
                     <a class="nav-link" th:classappend="${activeTab == 'Cart' ? 'active' : ''}"
                        th:href="@{/product/cart-list}">Корзина</a>
                 </li>
